# HM_VISION

./: .gitignore  CMakeLists.txt  CMakePresets.json  QtCreator打开说明.txt  main.cpp
.githooks/: post-commit
Algorithm/: AlgorithmFactory.cpp  AlgorithmFactory.h  AlgorithmScheduler.cpp  AlgorithmScheduler.h  DetectionAlgorithm.cpp  DetectionAlgorithm.h  HalconAlgorithm.cpp  HalconAlgorithm.h  IVisionAlgorithm.h  OCRProcessor.cpp  OCRProcessor.h  ThreadPool.h  YOLODetector.cpp  YOLODetector.h
Common/: AlgorithmParams.h  AlgorithmResult.h
Communication/: MESClient.cpp  MESClient.h
Core/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  VisionSystem.cpp  VisionSystem.h
Data/: ResultRepository.cpp  ResultRepository.h
Device/: CameraManager.cpp  CameraManager.h  GigE_Camera.cpp  GigE_Camera.h  ICamera.h  IPLCInterface.h  ModbusPLC.cpp  ModbusPLC.h  USB_Camera.cpp  USB_Camera.h
UI/: CameraWidget.cpp  CameraWidget.h  MainWindow.cpp  MainWindow.h  MultiCameraView.cpp  MultiCameraView.h
docs/: PROJECT_STRUCTURE.md
include/Algorithm/: AlgorithmFactory.h  AlgorithmScheduler.h  DetectionAlgorithm.h  HalconAlgorithm.h  IVisionAlgorithm.h  OCRProcessor.h  ThreadPool.h  YOLODetector.h
include/Common/: AlgorithmParams.h  AlgorithmResult.h  CameraTypes.h  Types.h
include/Core/: ConfigManager.h  LogMacros.h  Logger.h  VisionSystem.h
include/Data/: ResultRepository.h
include/Device/: CameraFactory.h  CameraManager.h  GigE_Camera.h  HikCameraBase.h  HikGigECamera.h  HikUSBCamera.h  ICamera.h  ModbusPLC.h  USB_Camera.h  VirtualCamera.h
include/UI/: AlgorithmPage.h  CameraPage.h  CameraWidget.h  MainInterfaceWidget.h  MainWindow.h  MultiCameraView.h
src/Algorithm/: AlgorithmFactory.cpp  AlgorithmScheduler.cpp  DetectionAlgorithm.cpp  HalconAlgorithm.cpp  OCRProcessor.cpp  ThreadPool.cpp  YOLODetector.cpp
src/Communication/: MESClient.cpp
src/Core/: ConfigManager.cpp  Logger.cpp  VisionSystem.cpp
src/Data/: ResultRepository.cpp
src/Device/: CameraFactory.cpp  CameraManager.cpp  GigECamera.cpp  GigE_Camera.cpp  HikCameraBase.cpp  HikGigECamera.cpp  HikUSBCamera.cpp  ModbusPLC.cpp  USBCamera.cpp  USB_Camera.cpp  VirtualCamera.cpp
src/UI/: AlgorithmPage.cpp  CameraPage.cpp  CameraWidget.cpp  MainInterfaceWidget.cpp  MainWindow.cpp
tests/: CMakeLists.txt  smoke_test.cpp
